--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,16 @@
+// tsconfig.json
 {
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "moduleResolution": "node", 
+    "types": ["node"]
+  }
 }
